[gd_scene load_steps=6 format=2]

[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/HourMinutePopup.gd" type="Script" id=2]
[ext_resource path="res://scenes/NumberScroll.tscn" type="PackedScene" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=7]
size = 60
use_filter = true
font_data = ExtResource( 1 )

[node name="HourMinutePopup" type="Popup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -440.0
margin_top = -432.0
margin_right = 440.0
margin_bottom = 432.0
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 112.0
margin_right = -64.0
margin_bottom = -112.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 747.0
margin_bottom = 635.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 742.0
margin_bottom = 546.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HourScroll" parent="PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 244.0
margin_bottom = 546.0
step = 1.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 248.0
margin_top = 237.0
margin_right = 493.0
margin_bottom = 308.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = ":"
align = 1
valign = 1

[node name="MinuteScroll" parent="PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 497.0
margin_right = 742.0
margin_bottom = 546.0
max_value = 59.0
step = 1.0
page = 7.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 550.0
margin_right = 742.0
margin_bottom = 630.0
alignment = 1

[node name="OkButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 369.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "Ok"

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 373.0
margin_right = 742.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "Cancel"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_CancelButton_pressed"]
